fix(dark): darken text on dashboard/login warnings in dark mode

--- a/intranet/static/css/emerg.scss
+++ b/intranet/static/css/emerg.scss
@@ -47,6 +47,7 @@ body.has-login-warning {
 
 .dash-warning,
 .login-warning {
+    color: #484848;
     background-color: yellow;
     border: 1px solid #d2d042;
     padding: 10px;
